# ComfyUI-Local-Translator

./: LICENSE  README.md  __init__.py  common.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_action.yml
nodes/: LocalTranslator.py  ProxyForLM.py
